After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 734143 - Cannot drag files from the filechooser anymore
Cannot drag files from the filechooser anymore
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2014-08-01 21:37 UTC by Paolo Borelli
Modified: 2014-08-11 18:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
treeview: Check the selected node active flag before maybe starting rubberband (1.65 KB, patch)
2014-08-11 16:09 UTC, Carlos Garnacho
committed Details | Review

Description Paolo Borelli 2014-08-01 21:37:45 UTC
1) open gedit
2) open file file chooser
3) drag files from the file chooser to the gedit window


it works in 3.12 and does not work anymore on master


Not sure if it is an intentional design change or a fallout from the gesture stuff
Comment 1 Matthias Clasen 2014-08-03 00:02:38 UTC
looks like an interaction between dnd, multi-selection and rubberbanding ?
Comment 2 Carlos Garnacho 2014-08-11 16:09:22 UTC
Created attachment 283123 [details] [review]
treeview: Check the selected node active flag before maybe starting rubberband

This check used to be present in the pre-gestures code, but was unintentionally
removed when splitting code into drag/multiclick gestures. The policy used to
be that if clicking happened on an already selected node, DnD would happen
instead of rubberband selection, so this behavior is resuscitated.
Comment 3 Matthias Clasen 2014-08-11 16:55:44 UTC
Review of attachment 283123 [details] [review]:

ok, thanks
Comment 4 Carlos Garnacho 2014-08-11 18:18:56 UTC
Attachment 283123 [details] pushed as b56f5ce - treeview: Check the selected node active flag before maybe starting rubberband